--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
+<!DOCTYPE html>
 <html>
-
-<body>
-  <h1>Andrew J. Lloyd</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
-
+	<head>
+		<title>Hank Quinlan, Horrible Cop</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Andrew J. Lloyd</h1>
+				<p>Lamont-Doherty Earth Observatory, Columbia University</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:andrewl@ldeo.columbia.edu">email</a></li>
+        		<li><a href="https://github.com/alloyd42486">github.com/alloyd42486</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
