--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+	        	<li><a href="/Group">About</a></li>
+        		<li><a href="/Research">CV</a></li>
+        		<li><a href="/CV">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Andrew J. Lloyd</h1>
+        		<h1>Andrew J. Lloyd, Lamont Assistant Research Professor</h1>
 				<p>Lamont-Doherty Earth Observatory, Columbia University</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
