--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/Group">About</a></li>
-        		<li><a href="/Research">CV</a></li>
-        		<li><a href="/CV">Blog</a></li>
+	        	<li><a href="/Group">Group</a></li>
+        		<li><a href="/Research">Research</a></li>
+        		<li><a href="/CV">CV</a></li>
     		</ul>
 		</nav>
 		<div class="container">
