--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Andrew J. Lloyd<br>Lamont Assistant Research Professor</title>
+		<title>Andrew J. Lloyd, LARP</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Andrew J. Lloyd, Lamont Assistant Research Professor</h1>
+        		<h1>Andrew J. Lloyd<br>Lamont Assistant Research Professor</h1>
 				<p>Lamont-Doherty Earth Observatory, Columbia University</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
